# BIGAUTO

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
database/supabase/: VERIFICATION_REPORT.md  schema.sql
database/supabase/migrations/: 001_create_users.sql  002_create_vehicles.sql  003_create_rental_bookings.sql  004_create_testdrive_bookings.sql  005_create_payments.sql  006_create_reviews.sql  007_create_conversations.sql  008_create_messages.sql  009_create_favorites.sql  010_create_seller_balance.sql  011_create_withdrawals.sql  012_create_notifications.sql  013_add_indexes.sql  014_1_add_jti_index.sql  014_create_user_sessions.sql  015_create_email_verifications.sql  016_create_login_otps.sql  017_update_users_table.sql  018_create_transaction_logs.sql  019_create_vehicle_brands_models.sql  020_create_cities.sql  021_create_audit_logs.sql  022_create_rate_limits.sql  023_create_sale_orders.sql  024_fix_payments_polymorphic.sql  025_fix_reviews_polymorphic.sql  026_update_transaction_logs.sql  027_create_commission_settings.sql  028_update_vehicles_status.sql  029_add_sale_indexes.sql  030_create_sale_triggers.sql  031_create_helper_functions.sql  032_enable_rls_all_tables.sql  033_create_rls_policies.sql  034_fix_function_search_path.sql  035_fix_rls_field_mismatches.sql  DEPLOYMENT_LOG.md  README_MIGRATIONS.md  README_RLS_SECURITY.md
services/auth-service/: API-TESTING.md  Cargo.toml  Dockerfile
services/auth-service/src/: config.rs  error.rs  main.rs  routes.rs  scheduler.rs
services/auth-service/src/domain/: auth.rs  session.rs  user.rs
services/auth-service/src/handlers/: auth.rs  mod.rs  otp.rs  session.rs  user.rs
services/auth-service/src/middleware/: auth.rs  auth_extractor.rs  cors.rs  mod.rs  rate_limit.rs  security_headers.rs
services/auth-service/src/models/: email_verification.rs  login_otp.rs  mod.rs  session.rs  user.rs
services/auth-service/src/utils/: email.rs  hash.rs  jwt.rs  mod.rs  otp.rs  validation.rs
services/booking-service/: .env  Cargo.toml  Dockerfile
services/booking-service/src/: config.rs  error.rs  main.rs  routes.rs  scheduler.rs
services/booking-service/src/domain/: mod.rs  rental.rs  sale.rs  testdrive.rs
services/booking-service/src/handlers/: mod.rs  rental_handlers.rs  sale_handlers.rs  testdrive_handlers.rs
services/booking-service/src/middleware/: auth.rs  mod.rs  rate_limit.rs
services/booking-service/src/repositories/: mod.rs  rental_repo.rs  sale_repo.rs  testdrive_repo.rs
services/booking-service/src/utils/: jwt.rs
services/chat-service/: Cargo.toml  Dockerfile
services/chat-service/src/: config.rs  error.rs  main.rs  routes.rs
services/chat-service/src/domain/: conversation.rs  message.rs  mod.rs
services/chat-service/src/handlers/: conversations.rs  messages.rs  mod.rs  upload.rs  websocket.rs
services/chat-service/src/middleware/: auth.rs  mod.rs  rate_limit.rs
services/chat-service/src/repositories/: conversation_repo.rs  message_repo.rs  mod.rs
services/chat-service/src/utils/: jwt.rs  mod.rs
services/financial-service/: Cargo.toml  Dockerfile
services/financial-service/src/: config.rs  error.rs  main.rs  routes.rs
services/financial-service/src/domain/: mod.rs  models.rs
services/financial-service/src/handlers/: balance.rs  mod.rs  transactions.rs  withdrawals.rs
services/financial-service/src/middleware/: auth.rs  mod.rs  rate_limit.rs
services/financial-service/src/utils/: jwt.rs  mod.rs
services/notification-service/: Cargo.toml  Dockerfile
services/notification-service/src/: config.rs  error.rs  main.rs  routes.rs
services/notification-service/src/domain/: notification.rs
services/notification-service/src/handlers/: notification.rs
services/notification-service/src/middleware/: auth.rs  rate_limit.rs
services/notification-service/src/utils/: jwt.rs
services/payment-service/: Cargo.toml  Dockerfile
services/payment-service/src/: config.rs  error.rs  main.rs  routes.rs
services/payment-service/src/domain/: payment.rs
services/payment-service/src/handlers/: midtrans_service.rs  mod.rs  payment_handler.rs
services/payment-service/src/middleware/: auth.rs  mod.rs  rate_limit.rs
services/payment-service/src/repositories/: mod.rs  payment_repo.rs
services/payment-service/src/utils/: jwt.rs  mod.rs
services/user-service/: API_DOCUMENTATION.md  Cargo.toml  Dockerfile  TESTING_REPORT.md
services/user-service/src/: config.rs  error.rs  main.rs  routes.rs  scheduler.rs
services/user-service/src/domain/: favorite.rs  mod.rs  review.rs  user.rs
services/user-service/src/handlers/: favorite.rs  mod.rs  profile.rs  rating.rs
services/user-service/src/middleware/: auth.rs  mod.rs  rate_limit.rs
services/user-service/src/utils/: jwt.rs
services/vehicle-service/: Cargo.toml  Dockerfile  VEHICLE_SERVICE_API_TESTING_GUIDE.md
services/vehicle-service/src/: config.rs  error.rs  main.rs  routes.rs  scheduler.rs
services/vehicle-service/src/domain/: vehicle.rs
services/vehicle-service/src/handlers/: filters.rs  mod.rs  photos.rs  vehicles.rs
services/vehicle-service/src/middleware/: auth.rs  rate_limit.rs
services/vehicle-service/src/repositories/: filter_repo.rs  mod.rs  vehicle_repo.rs
services/vehicle-service/src/utils/: jwt.rs  mod.rs
shared/: Cargo.toml  README.md
shared/src/models/: claims.rs
shared/src/utils/: auth_middleware.rs  cloudinary.rs  http_client.rs  jwt.rs  mod.rs  token_extraction.rs  validation.rs
