[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Authentication & Security
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
rand_core = { workspace = true }

# Email
lettre = { workspace = true }

# Environment Variables
dotenvy = { workspace = true }

# Utilities
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.10"
once_cell = "1.19"
sha2 = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

# OpenAPI Documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Redis (untuk rate limiting OTP)
redis = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Shared Library
shared = { path = "../../shared" }