[package]
name = "booking-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared Library
shared = { path = "../../shared" }

# Web Framework
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Date & Time
chrono = { workspace = true }

# Environment Variables
dotenvy = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenAPI Documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP Client (untuk external API calls)
reqwest = { workspace = true }

# UUID untuk ID generation
uuid = { workspace = true }

# Random number generation
rand = { workspace = true }
