[package]
name = "financial-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Authentication & Security
jsonwebtoken = { workspace = true }
uuid = { workspace = true }

# Environment Variables
dotenvy = { workspace = true }

# Utilities
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

# OpenAPI Documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Shared Library
shared = { path = "../../shared" }

# Redis (Rate Limiting)
redis = { workspace = true }