[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared Library
shared = { path = "../../shared" }

# Web Framework
axum = { workspace = true }
axum-extra = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis for Rate Limiting
redis = { workspace = true }

# Authentication & Security
jsonwebtoken = { workspace = true }

# Email Service (Resend API)
reqwest = { workspace = true }

# Environment Variables
dotenvy = { workspace = true }

# Utilities
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = "1.19"

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

# OpenAPI Documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { version = "6", features = ["axum"] }