[package]
name = "vehicle-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared Library
shared = { path = "../../shared" }

# Web Framework
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["typed-header"] }
async-trait = "0.1"
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Authentication & Security
jsonwebtoken = { workspace = true }

# Environment Variables
dotenvy = { workspace = true }

# Utilities
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
once_cell = "1.19"

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

# Redis for Rate Limiting 
redis = { workspace = true }

# OpenAPI Documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
